# python-project-lvl3

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: projectci.yml
page_loader/: __init__.py  content.py  content_processing.py  file.py  file_functions.py  file_processing.py  logger_config.py  module_dict.py  naming.py  naming_functions.py  page_downloads.py  url_functions.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: web_page_mod.html  web_page_mod_error.html
