[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This project contains a module"
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]
packages = [{ include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
